Frontend updated for menu and reviews pages.

--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -1,5 +1,15 @@
 ion-menu ion-content {
   --background: var(--ion-item-background, var(--ion-background-color, #fff));
+ 
+
+
+
+}
+ion-menu.md {
+
+  
+max-width: 10rem;
+
 }
 
 ion-menu.md ion-content {
@@ -7,22 +17,28 @@ ion-menu.md ion-content {
   --padding-end: 8px;
   --padding-top: 20px;
   --padding-bottom: 20px;
+  
+  
 }
 
 ion-menu.md ion-list {
   padding: 20px 0;
+  
 }
 
 ion-menu.md ion-note {
   margin-bottom: 30px;
+  
 }
 
 ion-menu.md ion-list-header, ion-menu.md ion-note {
   padding-left: 10px;
+  
 }
 
 ion-menu.md ion-list#inbox-list {
   border-bottom: 1px solid var(--ion-color-step-150, #d7d8da);
+  
 }
 
 ion-menu.md ion-list#inbox-list ion-list-header {
@@ -36,20 +52,25 @@ ion-menu.md ion-list#labels-list ion-list-header {
   margin-bottom: 18px;
   color: #757575;
   min-height: 26px;
+  
 }
 
 ion-menu.md ion-item {
   --padding-start: 10px;
   --padding-end: 10px;
   border-radius: 4px;
+  background-color: #9f9df3;
+  color: rgb(0, 0, 0);
+  --color-hover: rgb(0, 0, 0);
 }
 
 ion-menu.md ion-item.selected {
   --background: rgba(var(--ion-color-primary-rgb), 0.14);
+  color: rgb(249, 244, 244);
 }
 
 ion-menu.md ion-item.selected ion-icon {
-  color: var(--ion-color-primary);
+  color: rgb(249, 244, 244);
 }
 
 ion-menu.md ion-item ion-icon {
