Implemented admin panel and backend functions

--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -1,14 +1,16 @@
 ion-menu ion-content {
   --background: var(--ion-item-background, var(--ion-background-color, #fff));
- 
 
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
 
 
 }
-ion-menu.md {
 
-  
-max-width: 10rem;
+ion-menu.md {
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
+
+  border: none;
+  max-width: 10rem;
 
 }
 
@@ -17,34 +19,37 @@ ion-menu.md ion-content {
   --padding-end: 8px;
   --padding-top: 20px;
   --padding-bottom: 20px;
-  
-  
+
+
 }
 
 ion-menu.md ion-list {
   padding: 20px 0;
-  
+
 }
 
 ion-menu.md ion-note {
   margin-bottom: 30px;
-  
+
 }
 
-ion-menu.md ion-list-header, ion-menu.md ion-note {
+ion-menu.md ion-list-header,
+ion-menu.md ion-note {
   padding-left: 10px;
-  
+  border: none;
+  box-shadow: none;
+
 }
 
 ion-menu.md ion-list#inbox-list {
-  border-bottom: 1px solid var(--ion-color-step-150, #d7d8da);
-  
+  box-shadow: none;
 }
 
 ion-menu.md ion-list#inbox-list ion-list-header {
   font-size: 22px;
   font-weight: 600;
   min-height: 20px;
+
 }
 
 ion-menu.md ion-list#labels-list ion-list-header {
@@ -52,14 +57,15 @@ ion-menu.md ion-list#labels-list ion-list-header {
   margin-bottom: 18px;
   color: #757575;
   min-height: 26px;
-  
+
 }
 
 ion-menu.md ion-item {
   --padding-start: 10px;
   --padding-end: 10px;
   border-radius: 4px;
-  background-color: #9f9df3;
+  background-color: #0F2C59;
+  ;
   color: rgb(0, 0, 0);
   --color-hover: rgb(0, 0, 0);
 }
@@ -98,10 +104,15 @@ ion-menu.ios ion-item {
   --padding-start: 16px;
   --padding-end: 16px;
   --min-height: 50px;
+  border-radius: 4px;
+  background-color: #9f9df3;
+  color: rgb(0, 0, 0);
+  --color-hover: rgb(0, 0, 0);
 }
 
 ion-menu.ios ion-item ion-icon {
   font-size: 24px;
+
   color: #73849a;
 }
 
@@ -131,4 +142,4 @@ ion-note {
 
 ion-item.selected {
   --color: var(--ion-color-primary);
-} 
+}
