--- a/src/components/Reviews.css
+++ b/src/components/Reviews.css
@@ -1,42 +1,50 @@
 /* Base styles for all devices */
 .ion-card-custom {
-    height: 50%; 
-  
+  height: 50%;
+  background-size: cover;
+  background-position: center;
+
+}
+
+.ion-content-custom {
+  --ion-color-light: #F8F0E5;
+  padding: 10rem !important;
+}
+
+
+
+ion-button {
+  --background: #9f9df3;
+  --background-hover: #9f9df3;
+  --color: White;
+  --border-radius: 10px;
+  width: 10rem;
+  --box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
+  --padding-top: 10px;
+  --padding-bottom: 10px;
+  margin: 1rem;
+  text-transform: none;
+}
+
+
+@media (max-width: 768px) {
+  .ion-card-custom {
+    height: 20%;
   }
-  
-  ion-button {
-    --background: #9f9df3;
-    --background-hover: #9f9df3;
-    --color: White;
-    --border-radius: 10px;
-    width: 10rem;
-    --box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
-    --padding-top: 10px;
-    --padding-bottom: 10px;
-    margin: 1rem;
-    text-transform: none;
+}
+
+
+@media (min-width: 769px) {
+  .ion-card-custom {
+    height: 50%;
   }
-  .ion-list-custom{
-    max-height: 50vh;
-    margin: 3rem;
+
+  .ion-list-custom {
+    height: 70%;
     overflow-y: auto;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
+    margin: 5rem;
 
 
   }
-  
-  @media (max-width: 768px) {
-    .ion-card-custom {
-      height: 20%;
-    }
-  }
-  
- 
-  @media (min-width: 769px) {
-    .ion-card-custom {
-        height: 50%;
-      
-    }
-  }
-  
-  
+}
