--- a/src/components/Reviews.css
+++ b/src/components/Reviews.css
@@ -1,4 +1,3 @@
-/* Base styles for all devices */
 .ion-card-custom {
   height: 50%;
   background-size: cover;
@@ -31,20 +30,23 @@ ion-button {
   .ion-card-custom {
     height: 20%;
   }
+
+  .ion-list-custom {
+    margin: 0rem;
+    overflow-y: auto;
+    box-shadow: none;
+  }
 }
 
 
 @media (min-width: 769px) {
   .ion-card-custom {
-    height: 50%;
+    height: 100%;
   }
 
   .ion-list-custom {
     height: 70%;
     overflow-y: auto;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
-    margin: 5rem;
-
-
+    box-shadow: none;
   }
 }
